--- a/package.json
+++ b/package.json
@@ -5,11 +5,15 @@
   "proxy": "http://localhost:5000",
   "dependencies": {
     "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
+    "@sweetalert2/theme-wordpress-admin": "^3.2.0",
     "axios": "^0.19.0",
     "bcryptjs": "^2.4.3",
     "cookie-session": "^2.0.0-beta.3",
     "dotenv": "^4.0.0",
     "express": "^4.16.4",
+    "moment": "^2.27.0",
+    "node-sass": "^4.14.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "pg": "^7.9.0",
@@ -21,7 +25,8 @@
     "react-scripts": "^3.4.0",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
-    "redux-saga": "^1.0.2"
+    "redux-saga": "^1.0.2",
+    "sweetalert2": "^9.15.3"
   },
   "scripts": {
     "start": "node server/server.js",
