--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "cookie-session": "^2.0.0-beta.3",
     "dotenv": "^4.0.0",
     "express": "^4.16.4",
-    "moment": "^2.27.0",
+    "moment-timezone": "^0.5.31",
     "node-sass": "^4.14.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
